# filepack

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  clippy.toml  justfile  metadata.yaml
.github/workflows/: ci.yaml  release.yaml
crates/filepack-cbor/: Cargo.toml
crates/filepack-cbor/src/: attributes.rs  field.rs  input.rs  lib.rs  parsed_field.rs  parsed_variant.rs  receiver.rs  variant.rs
deploy/: checkout  filepack.service  setup
docs/: CNAME  index.html  install.sh
src/: api.rs  application.rs  archive.rs  archive_builder.rs  archive_error.rs  arguments.rs  array_decoder.rs  array_encoder.rs  artwork_type.rs  audio.rs  audio_codec.rs  audio_error.rs  audio_format.rs  audio_info.rs  audio_type.rs  authenticated.rs  bech32_decoder.rs  bech32_encoder.rs  bech32_error.rs  bech32_type.rs  bech32m.rs  bech32m_decoder.rs  bech32m_encoder.rs  bech32m_error.rs  bech32m_parser.rs  bech32m_payload.rs  bech32m_suffix.rs  bech32m_type.rs  byte.rs  bytes.rs  cause.rs  cbor.rs  checked_url.rs  client_cert_verifier.rs  codec.rs  component.rs  component_buf.rs  component_error.rs  connection.rs  content_disposition.rs  (+155 more)
src/cbor/: decode.rs  decode_error.rs  decoder.rs  directory.rs  encode.rs  encoder.rs  entry.rs  entry_type.rs  head.rs  major_type.rs  map_decoder.rs  map_encoder.rs  version.rs
src/relative_path/: error.rs
src/subcommand/: archive.rs  bech32.rs  bech32m.rs  contains.rs  create.rs  download.rs  files.rs  fingerprint.rs  hash.rs  info.rs  key.rs  keygen.rs  languages.rs  lints.rs  man.rs  manifest.rs  message.rs  metadata.rs  node.rs  render.rs  serve.rs  server.rs  sign.rs  signatures.rs  size.rs  upload.rs  verify.rs
src/subcommand/serve/: route.rs  tests.rs
src/subcommand/server/: server_error.rs  templates.rs
src/templates/: audio.rs  directory.rs  files.rs  image.rs  package.rs  packages.rs  page.rs  track.rs  video.rs
static/: 404.css  404.html  directory.css  home.css  image.css  index.css  index.html  index.js  package.css  track.css  video.css
static/gpg-test/: message.sig  public-key.gpg  secret-key.gpg
static/ssh-test/: id_ed25519  id_ed25519.pub  message  message.sig
templates/: audio.html  directory.html  files.html  image.html  index.html  package.html  packages.html  page.html  track.html  video.html
tests/: archive.rs  bech32.rs  bech32m.rs  child.rs  contains.rs  create.rs  data_dir.rs  download.rs  expected.rs  files.rs  fingerprint.rs  hash.rs  info.rs  json.rs  key.rs  key_dir.rs  keychain.rs  keygen.rs  languages.rs  lib.rs  lint.rs  lints.rs  man.rs  manifest.rs  message.rs  metadata.rs  misc.rs  missing.rs  notes.rs  pgp.rs  render.rs  serve.rs  server.rs  sign.rs  signatures.rs  size.rs  ssh.rs  test.rs  upload.rs  verify.rs
www/: 404.css  404.html  index.css  index.html
