[package]
name = "filepack"
version = "0.0.6"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
autotests = false
categories = ["authentication", "command-line-utilities", "cryptography"]
description = "file verification utility"
edition = "2024"
homepage = "https://github.com/casey/filepack"
keywords = ["checksum", "verification"]
license = "CC0-1.0"
repository = "https://github.com/casey/filepack"
include = ["CHANGELOG.md", "CONTRIBUTING", "LICENSE", "README.md", "src", "tests"]

[dependencies]
blake3 = { version = "1.5.4", features = ["mmap", "rayon", "serde"] }
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.16", features = ["derive"] }
clap_mangen = "0.2.23"
dirs = "5.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex = "0.4.3"
indicatif = "0.17.8"
lexiclean = "0.0.1"
owo-colors = "4"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = "3.11.0"
serde_yaml = "0.9.34"
snafu = "0.8.4"
strum = { version = "0.27.2", features = ["derive"] }
usized = "0.0.2"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color-auto"] }
assert_fs = { version = "1.1.2", features = ["color-auto"] }
predicates = "3.1.2"
pretty_assertions = "1.4.1"
regex = "1.10.6"

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
float-cmp = "allow"
large_enum_variant = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
needless-pass-by-value = "allow"
pedantic = { level = "deny", priority = -1 }
result-large-err = "allow"
similar-names = "allow"
too-many-lines = "allow"
unused-async = "allow"
wildcard-imports = "allow"

[lints.rust]
mismatched-lifetime-syntaxes = "allow"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = [".", "crates/*"]

[[test]]
name = "integration"
path = "tests/lib.rs"
